# zero-schema

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SAFETY.md  TESTING.md  deny.toml
benches/: codec.rs
conformance/: Cargo.toml  build.rs
conformance/benches/: cpp_codec.rs
conformance/fixtures/: cases.rs
conformance/fixtures/golden/: manifest.csv
conformance/src/: ffi.rs  inventory.rs  lib.rs  report.rs
conformance/src/tests/: contract.rs  golden.rs  mod.rs  options.rs  report.rs  status.rs
fuzz/: Cargo.toml
fuzz/corpus/parse_all_strings/: 1-invalid
fuzz/corpus/parse_message/: 1-valid  2-invalid  2-valid
fuzz/corpus/roundtrip_message/: 1-invalid  1-valid
fuzz/fuzz_targets/: parse_all_strings.rs  parse_external_tag.rs  parse_message.rs  roundtrip_message.rs
fuzz/src/: lib.rs
no-std-smoke/: Cargo.toml  README.md
no-std-smoke/src/: lib.rs
target-tests/wide-endian/: Cargo.toml
target-tests/wide-endian/src/: lib.rs
test-fixtures/schema-corpus/: Cargo.toml  inventory.csv
test-fixtures/schema-corpus/src/: conformance.rs  lib.rs
tests/miri-harness/: Cargo.toml
zero-schema-derive/: Cargo.toml
zero-schema-derive/src/: gen.rs  gen_struct.rs  gen_tagged.rs  ir.rs  lib.rs  parse.rs
zero-schema-derive/tests/: ui.rs
zero-schema-derive/tests/fixtures/aggregate-pass/: Cargo.toml
zero-schema-derive/tests/fixtures/aggregate-pass/src/: main.rs
zero-schema-derive/tests/fixtures/encode-api-pass/: Cargo.toml
zero-schema-derive/tests/fixtures/encode-api-pass/src/: generic_absent.rs  main.rs
zero-schema-derive/tests/fixtures/lazy-zero-fail/: Cargo.toml  stderr.txt
zero-schema-derive/tests/fixtures/lazy-zero-fail/src/: main.rs  parent_encode.rs  parent_parse.rs  root_encode.rs  root_parse.rs
zero-schema-derive/tests/fixtures/lazy-zero-pass/: Cargo.toml
zero-schema-derive/tests/fixtures/lazy-zero-pass/src/: main.rs
zero-schema-derive/tests/fixtures/local-item-fail/: Cargo.toml  stderr.txt
zero-schema-derive/tests/fixtures/local-item-fail/src/: main.rs
zero-schema-derive/tests/fixtures/missing-zerocopy-fail/: Cargo.toml  stderr.txt
zero-schema-derive/tests/fixtures/missing-zerocopy-fail/src/: main.rs
zero-schema-derive/tests/fixtures/struct-hygiene-pass/: Cargo.toml
zero-schema-derive/tests/fixtures/struct-hygiene-pass/src/: lib.rs
zero-schema-derive/tests/fixtures/wide-target-fail/: Cargo.toml  stderr.txt
zero-schema-derive/tests/fixtures/wide-target-fail/src/: main.rs
zero-schema-derive/tests/ui/fail/: 01_poison_options.rs  01_poison_options.stderr  02_nested_attributes.rs  02_nested_attributes.stderr  03_packed_and_shape.rs  03_packed_and_shape.stderr  04_scalar_invalid.rs  04_scalar_invalid.stderr  05_unsupported_types.rs  05_unsupported_types.stderr  06_capacity_align.rs  06_capacity_align.stderr  07_zero_variant_tagged.rs  07_zero_variant_tagged.stderr  08_tag_paths.rs  08_tag_paths.stderr  09_external_links.rs  09_external_links.stderr  10_expression_rejections.rs  10_expression_rejections.stderr  11_api_names.rs  11_api_names.stderr  12_self_recursion.rs  12_self_recursion.stderr  13_macro_type.rs  13_macro_type.stderr  14_zero_records.rs  14_zero_records.stderr
zero-schema-derive/tests/ui/pass/: 00_scalar_only.rs
zero-schema-macros/: Cargo.toml  LICENSE
zero-schema-macros/src/: analyze.rs  emit_access.rs  emit_mutation.rs  emit_patch.rs  emit_wire.rs  errors.rs  lib.rs  parse.rs
zero-schema-macros/tests/: mutation_api.rs  ui.rs
zero-schema-macros/tests/fixtures/aggregate-pass/: Cargo.toml
zero-schema-macros/tests/fixtures/aggregate-pass/src/: main.rs
zero-schema-macros/tests/fixtures/criterion-import-pass/: Cargo.toml
zero-schema-macros/tests/fixtures/criterion-import-pass/src/: main.rs
zero-schema-macros/tests/fixtures/legacy-naming-surface-fail/: Cargo.toml  build.rs
zero-schema-macros/tests/fixtures/legacy-naming-surface-fail/src/: lib.rs
zero-schema-macros/tests/fixtures/local-item-fail/: Cargo.toml  stderr.txt
zero-schema-macros/tests/fixtures/local-item-fail/src/: main.rs
zero-schema-macros/tests/fixtures/missing-tag-field-fail/: Cargo.toml
zero-schema-macros/tests/fixtures/missing-tag-field-fail/src/: main.rs
zero-schema-macros/tests/fixtures/missing-zerocopy-fail/: Cargo.toml  stderr.txt
zero-schema-macros/tests/fixtures/missing-zerocopy-fail/src/: main.rs
zero-schema-macros/tests/fixtures/renamed-dependencies-pass/: Cargo.toml
zero-schema-macros/tests/fixtures/renamed-dependencies-pass/src/: main.rs
zero-schema-macros/tests/fixtures/wrong-tag-enum-fail/: Cargo.toml
zero-schema-macros/tests/ui/fail/: 00_removed_derive.rs  00_removed_derive.stderr  01_exact_grammar.rs  01_exact_grammar.stderr  01_removed_container_options.rs  01_removed_container_options.stderr  02_array_expression.rs  02_array_expression.stderr  02_removed_field_options.rs  02_removed_field_options.stderr  03_lifetime_ambiguity.rs  03_lifetime_ambiguity.stderr  03_removed_api.rs  03_removed_api.stderr  04_tag_field_syntax.rs  04_tag_field_syntax.stderr  05_generated_collision.rs  05_generated_collision.stderr  06_tag_field_non_enum.rs  06_tag_field_non_enum.stderr  06_unsupported_item.rs  06_unsupported_item.stderr  07_tag_field_missing_value.rs  07_tag_field_missing_value.stderr  08_tag_field_shared.rs  08_tag_field_shared.stderr  09_tagged_root_api.rs  09_tagged_root_api.stderr  10_tagged_root_buffer.rs  10_tagged_root_buffer.stderr  11_zero_length_array.rs  11_zero_length_array.stderr  12_zero_sized_root.rs  12_zero_sized_root.stderr  13_zero_sized_member.rs  13_zero_sized_member.stderr  14_unsupported_array_element.rs  14_unsupported_array_element.stderr  15_recursive_array.rs  15_recursive_array.stderr  (+112 more)
zero-schema-macros/tests/ui/pass/: 00_retained_item.rs  01_hygiene_generics.rs  02_tagged_payload_root.rs  03_hygiene_visibility_raw_paths.rs  04_access_copy_mutation.rs  05_retained_literals_patterns.rs  06_shadowed_prelude.rs  07_raw_tagged_keyword.rs  08_optional_zero_sentinel.rs  09_option_capability_surface.rs  10_optional_source_lifetime.rs  11_symbolic_nonzero_arrays.rs
(+91 files in other folders)
