[package]
name = "zero-schema-fuzz"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]
resolver = "3"

[dependencies]
libfuzzer-sys = "=0.4.13"
zero-schema = { path = "..", default-features = false, features = ["std"] }
zerocopy = { version = "=0.8.54", default-features = false, features = ["derive"] }
zero-schema-schema-corpus = { path = "../test-fixtures/schema-corpus", default-features = false }

[dev-dependencies]
sha2 = "=0.11.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "parse_message"
path = "fuzz_targets/parse_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_external_tag"
path = "fuzz_targets/parse_external_tag.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_all_strings"
path = "fuzz_targets/parse_all_strings.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_message"
path = "fuzz_targets/roundtrip_message.rs"
test = false
doc = false
bench = false
