[package]
name = "zero-schema-no-std-smoke"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
zero-schema = { path = "..", default-features = false }
zerocopy = { version = "=0.8.54", default-features = false, features = ["derive"] }

[[bin]]
name = "linked-wasm"
path = "src/bin/linked-wasm.rs"
