[package]
name = "zero-schema-wide-endian"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]
resolver = "3"

[features]
default = []
u16str-prefix-native = []
u16str-prefix-little = []
u16str-prefix-big = []
u16str-prefix-inherited-little = []
u16str-prefix-inherited-big = []
scalar-native = []
scalar-little = []
scalar-big = []
u16cstr-native = []
u16cstr-endian-native-reject = []
u16cstr-endian-little-reject = []
u16cstr-endian-big-reject = []
positive-fixtures = [
    "u16str-prefix-native",
    "u16str-prefix-little",
    "u16str-prefix-big",
    "u16str-prefix-inherited-little",
    "u16str-prefix-inherited-big",
    "scalar-native",
    "scalar-little",
    "scalar-big",
    "u16cstr-native",
]

[dependencies]
zero-schema = { path = "../..", default-features = false }
widestring = { version = "=1.2.1", default-features = false }
zerocopy = { version = "=0.8.54", default-features = false, features = ["derive"] }
