[package]
name = "zero-schema-miri-harness"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
zero-schema = { path = "../..", default-features = false, features = ["std"] }
zerocopy = { version = "=0.8.54", features = ["derive"] }
widestring = { version = "=1.2.1", default-features = false }

[[test]]
name = "miri"
path = "../miri.rs"
