[package]
name = "zero-schema-ui-encode-api-pass"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]

[[bin]]
name = "encode-api-pass"
path = "src/main.rs"

[[bin]]
name = "generic-encode-absent"
path = "src/generic_absent.rs"

[dependencies]
zero-schema-derive = { path = "../../.." }
zs = { package = "zero-schema", path = "../../../..", default-features = false }
zerocopy = { version = "=0.8.54", default-features = false, features = ["derive"] }
