[package]
name="zero-schema-ui-lazy-zero-fail"
version="0.0.0"
edition="2024"
rust-version="1.85"
publish=false
[workspace]
[dependencies]
zero-schema-derive={path="../../.."}
zs={package="zero-schema",path="../../../..",default-features=false}
zerocopy={version="=0.8.54",default-features=false,features=["derive"]}
[[bin]]
name="root-parse"
path="src/root_parse.rs"
[[bin]]
name="root-encode"
path="src/root_encode.rs"
[[bin]]
name="parent-parse"
path="src/parent_parse.rs"
[[bin]]
name="parent-encode"
path="src/parent_encode.rs"
