[package]
name = "struct-hygiene-pass"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
zs = { package = "zero-schema", path = "../../../../", default-features = false }
zero-schema-derive = { path = "../../.." }
type = { package = "zerocopy", version = "=0.8.54", default-features = false, features = ["derive"] }
