[package]
name = "zero-schema-ui-wide-target-fail"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]

[dependencies]
zero-schema-derive = { path = "../../.." }
zs = { package = "zero-schema", path = "../../../..", default-features = false }
zerocopy = { version = "=0.8.54", default-features = false, features = ["derive"] }
widestring = { version = "=1.2.1", default-features = false }
