[package]
name = "zero-schema-ui-aggregate-pass"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]

[dependencies]
zero-schema-macros = { path = "../../.." }
zs = { package = "zero-schema", path = "../../../..", default-features = false }
zerocopy = { version = "=0.8.54", default-features = false, features = ["derive"] }
