[package]
name = "zero-schema-ui-renamed-dependencies-pass"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]

[dependencies]
zero-schema-macros = { path = "../../.." }
zs = { package = "zero-schema", path = "../../../..", default-features = false }
zc = { package = "zerocopy", version = "=0.8.54", default-features = false, features = ["derive"] }
